# runner_game_2d

./: .pre-commit-config.yaml  README.md  main.py  make_exe.py  pyproject.toml
src/: main.py
