[tool.poetry]
name = "pygame-learning"
version = "0.1.0"
description = ""
authors = ["Kinnay21 <legrandyannick21@laposte.net>"]
readme = "README.md"
packages = [{include = "pygame_learning"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "^2.4.0"
pyinstaller = "^5.11.0"
pre-commit = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
